# spadd

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
CMake/: Findjuce.cmake
Modules/: CMakeLists.txt
Modules/shared_processing_code/: shared_processing_code.cpp  shared_processing_code.h
Modules/shared_processing_code/Source/: SpatialPartial.hpp  Wavetable.hpp  Window.hpp
Plugin/: CMakeLists.txt
Plugin/Source/: ADSR.cpp  ADSR.hpp  BasicSignals.cpp  BasicSignals.hpp  IFFT.cpp  IFFT.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SpectralMotif.cpp  SpectralMotif.hpp  TimeDomain.cpp  TimeDomain.hpp  Timer.cpp  Timer.hpp  WavetableSineOscillator.hpp
SNR/: CMakeLists.txt
SNR/Source/: SNR.cpp
